--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "Kyle McKee",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.9.0",
     "express": "^4.4.1",
-    "jade": "^1.3.1"
+    "jade": "^1.3.1",
+    "morgan": "^1.3.2",
+    "style": "0.0.3",
+    "stylus": "^0.49.1"
   }
 }
